# Patcherex2

./: pyproject.toml
src/patcherex2/components/binfmt_tools/: elf.py
src/patcherex2/components/utils/: utils.py
src/patcherex2/patches/: instruction_patches.py
src/patcherex2/targets/: elf_arm_linux.py  elf_leon3_bare.py  elf_ppc_linux.py  elf_x86_64_linux.py
