[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "patcherex2"
version = "0.0.0"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "angr",
    "pyelftools",
    "lief",
    "keystone-engine@git+https://github.com/trail-of-forks/keystone@irene-main#subdirectory=bindings/python",
    "intelhex",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-select = ["I", "N", "UP", "B"]
